--- a/transform.html
+++ b/transform.html
@@ -67,35 +67,16 @@
             display: flex;
             justify-content: center;
             line-height: 40px;
-        }
-
-        nav ul li {
             perspective: 800px;
         }
 
-        nav ul li:nth-child(1) {
-            z-index: 5;
-        }
-
-        nav ul li:nth-child(2) {
-            z-index: 4;
-        }
-
-        nav ul li:nth-child(3) {
-            z-index: 3;
-        }
-
-        nav ul li:nth-child(4) {
-            z-index: 2;
-        }
-
-        nav ul li:nth-child(5) {
-            z-index: 1;
+        nav ul li {
+            margin: 0 10px;
         }
 
         .nav-item {
             display: block;
-            width: 120px;
+            width: 160px;
             height: 40px;
             line-height: 40px;
             text-align: center;
@@ -104,7 +85,7 @@
             text-transform: uppercase;
             padding: 8px 10px;
             transform-style: preserve-3d;
-            transform: rotateY(20deg);
+            /* transform: rotateY(20deg); */
             transition: 1s;
         }
 
@@ -118,7 +99,7 @@
         }
 
         .nav-item:hover {
-            transform: rotateY(20deg) rotateX(240deg);
+            transform: rotateX(240deg);
         }
 
         .nav-item span:nth-child(1) {
@@ -172,7 +153,13 @@
             transform: scale(1.5);
         }
 
-        #perspective .wrap {
+        /* grid */
+        .grid2 {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .wrap {
             width: 200px;
             height: 350px;
             margin: 0 auto;
@@ -181,7 +168,7 @@
             perspective: 800px;
         }
 
-        #perspective .box {
+        .box {
             position: relative;
             width: 100%;
             height: 100%;
@@ -189,11 +176,11 @@
             transition: 1s;
         }
 
-        #perspective .wrap:hover .box {
+        .wrap:hover .box {
             transform: rotateY(180deg);
         }
 
-        #perspective .box>* {
+        .box>* {
             position: absolute;
             left: 0;
             top: 0;
@@ -201,14 +188,100 @@
             height: 100%;
         }
 
-        #perspective .front {
+        .front {
             object-fit: contain;
             background-color: #f40;
         }
 
-        #perspective .back {
+        .back {
             background-color: #098;
             transform: rotateY(180deg);
+        }
+
+        .cube {
+            width: 200px;
+            height: 200px;
+            margin: 100px auto 0;
+            perspective: 800px;
+        }
+
+        .cube .box {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            transform-style: preserve-3d;
+            transform: rotateX(45deg) rotateY(0deg) rotateZ(0deg);
+            transition: 5s;
+        }
+
+        .cube .box>div {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            transition: 1s;
+        }
+
+        .cube .front {
+            background-color: #f40;
+            transform: translateZ(100px);
+        }
+
+        .cube .back {
+            background-color: #078;
+            transform: rotateY(180deg) translateZ(100px);
+        }
+
+        .cube .left {
+            background-color: rgb(11, 34, 233);
+            transform: rotateY(-90deg) translateZ(100px);
+        }
+
+        .cube .right {
+            background-color: rgb(0, 255, 255);
+            transform: rotateY(90deg) translateZ(100px);
+        }
+
+        .cube .top {
+            background-color: rgb(255, 166, 0);
+            transform: rotateX(90deg) translateZ(100px);
+        }
+
+        .cube .bottom {
+            background-color: rgb(0, 255, 0);
+            transform: rotateX(-90deg) translateZ(100px);
+        }
+
+        .cube:hover .box {
+            transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+        }
+
+        .cube .box:hover .front {
+            transform: translateZ(150px);
+        }
+
+        .cube .box:hover .back {
+            transform: rotateY(180deg) translateZ(150px);
+        }
+
+        .cube .box:hover .left {
+            /* 逆时针 */
+            transform: rotateY(-90deg) translateZ(150px);
+        }
+
+        .cube .box:hover .right {
+            /* 顺时针 */
+            transform: rotateY(90deg) translateZ(150px);
+        }
+
+        .cube .box:hover .top {
+            transform: rotateX(90deg) translateZ(150px);
+        }
+
+        .cube .box:hover .bottom {
+            transform: rotateX(-90deg) translateZ(150px);
         }
     </style>
 </head>
@@ -282,10 +355,22 @@
             <a href="#nav"><i class="iconfont icon-liebiao icon"></i></a>
             <a href="#home"><i class="iconfont icon-home2 icon"></i></a>
         </div>
-        <div class="wrap">
-            <div class="box">
-                <div class="back">glc</div>
-                <img src="imgs/flag.jpg" alt="" class="front">
+        <div class="grid2">
+            <div class="wrap">
+                <div class="box">
+                    <div class="back">glc</div>
+                    <img src="imgs/flag.jpg" alt="" class="front">
+                </div>
+            </div>
+            <div class="cube">
+                <div class="box">
+                    <div class="front">front</div>
+                    <div class="back">back</div>
+                    <div class="top">top</div>
+                    <div class="bottom">bottom</div>
+                    <div class="left">left</div>
+                    <div class="right">right</div>
+                </div>
             </div>
         </div>
     </section>
