--- a/transform.html
+++ b/transform.html
@@ -67,6 +67,7 @@
             display: flex;
             justify-content: center;
             line-height: 40px;
+            /* 呈辐射状 */
             perspective: 800px;
         }
 
