--- a/transition.html
+++ b/transition.html
@@ -21,6 +21,7 @@
             margin: 100px auto;
             overflow: hidden;
             background: #2980b9;
+            cursor: pointer;
         }
 
         .box>div {
