--- a/animation.html
+++ b/animation.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style type="text/css">
+    <title>animation</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+
         .wrapper {
             width: 100%;
             height: 450px;
@@ -14,7 +18,6 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            /*border-bottom: 1px solid #f40;*/
         }
 
         .box {
@@ -146,6 +149,7 @@
 </head>
 
 <body>
+    <h1>animation: name duration timing-function delay iteration-count direction;</h1>
     <div id="wrapper" class="wrapper">
         <div class="box"></div>
     </div>
