--- a/animation.html
+++ b/animation.html
@@ -11,6 +11,164 @@
             text-align: center;
         }
 
+        /* example1 */
+        .rect {
+            position: relative;
+            width: 400px;
+            height: 300px;
+            margin: 40px auto;
+            background-color: #eeece1;
+        }
+
+        .rect div {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 40px;
+            height: 40px;
+            background-color: #f40;
+            animation: move 12s linear 0s infinite;
+        }
+
+        @keyframes move {
+            0% {
+                left: 0px;
+                top: 0px;
+            }
+
+            25% {
+                left: 360px;
+                top: 0px;
+            }
+
+            50% {
+                left: 360px;
+                top: 260px;
+            }
+
+            75% {
+                left: 0;
+                top: 260px;
+            }
+
+            100% {
+                left: 0;
+                top: 0;
+            }
+        }
+
+        .rect:hover div {
+            animation-play-state: paused;
+        }
+
+        /* example2 */
+        .tx-box {
+            position: relative;
+            width: 600px;
+            height: 300px;
+            margin: 40px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .tx {
+            width: 100%;
+            height: 100%;
+            background-color: #eeece1;
+            transform-style: preserve-3d;
+            transform: perspective(800px) rotateX(60deg);
+        }
+
+        .tx::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            width: 100%;
+            height: 20px;
+            background-image: linear-gradient(90deg, #fff 70%, #333 0);
+            background-size: 120px;
+            transform: translateY(-50%);
+            animation: tx 2s linear infinite;
+        }
+
+        @keyframes tx {
+            0% {
+                background-position: 0;
+            }
+
+            100% {
+                background-position: -120px;
+            }
+        }
+
+        .tx::after {
+            content: '';
+            position: absolute;
+            bottom: -20px;
+            left: 0;
+            width: 100%;
+            height: 20px;
+            background-color: #666;
+            transform-origin: top;
+            transform: rotateX(-70deg);
+        }
+
+
+
+        .tx-shadow {
+            position: absolute;
+            left: 50%;
+            bottom: -62px;
+            width: 95%;
+            height: 30px;
+            transform: translateX(-50%);
+            background-image: linear-gradient(rgba(0, 0, 0, .4), transparent);
+        }
+
+        .cube-box {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            animation: xpos 1s linear infinite;
+        }
+
+        @keyframes xpos {
+            0% {
+                transform: translateX(0);
+            }
+
+            100% {
+                transform: translateX(-100px);
+            }
+
+        }
+
+        .cube {
+            position: relative;
+            width: 100px;
+            height: 100px;
+            background-color: #fff;
+            transform-origin: bottom right;
+            animation: roll-cube 1s linear infinite;
+        }
+
+        @keyframes roll-cube {
+            0% {
+                transform: rotateZ(0deg);
+            }
+
+            100% {
+                transform: rotateZ(90deg);
+            }
+
+        }
+
+        /* example3 */
         .wrapper {
             width: 100%;
             height: 450px;
@@ -81,7 +239,7 @@
             }
         }
 
-        /*------------ring-------------------*/
+        /* example4 */
         .ring {
             width: 100px;
             height: 100px;
@@ -149,7 +307,18 @@
 </head>
 
 <body>
-    <h1>animation: name duration timing-function delay iteration-count direction;</h1>
+    <h1>animation: name duration timing-function delay iteration-count direction fill-mode;</h1>
+    <div class="rect">
+        <div></div>
+    </div>
+    <div class="tx-box">
+        <div class="tx">
+            <div class="tx-shadow"></div>
+        </div>
+        <div class="cube-box">
+            <div class="cube"></div>
+        </div>
+    </div>
     <div id="wrapper" class="wrapper">
         <div class="box"></div>
     </div>
