--- a/demo.html
+++ b/demo.html
@@ -5,66 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEMO</title>
+    <title>Document</title>
     <style>
-        .box {
-            position: relative;
+        .wrap {
             width: 200px;
             height: 200px;
             margin: 100px auto;
         }
 
-        .box::before {
-            content: '';
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            width: 200px;
-            height: 200px;
-            border-radius: 20px;
-            background-color: #078;
-            animation: roll 1.5s linear infinite;
+        .box {
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
 
-        .box::after {
+        .box div {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            transform: rotate(calc(var(--x)*20deg));
+        }
+
+        .box div::after {
             content: '';
             position: absolute;
             left: 0;
-            bottom: -100px;
-            z-index: -1;
-            width: 200px;
+            top: 0;
+            width: 20px;
             height: 20px;
             border-radius: 50%;
-            background-color: #888;
-            animation: scale 1.5s linear infinite;
+            background-color: #f40;
+            box-shadow:
+                0 0 10px #ff0,
+                0 0 20px #f40;
+            transform: scale(0);
+            filter: hue-rotate(0);
+            animation: flash 1.44s linear infinite;
+            animation-delay: calc(var(--x)*.08s);
         }
 
-        @keyframes roll {
-            50% {
-                top: 0px;
-                transform: translateY(100px) rotateZ(45deg);
-                border-bottom-right-radius: 50%;
-            }
-
-            100% {
-                transform: rotateZ(90deg);
-            }
-        }
-
-        @keyframes scale {
-            50% {
-                transform: scale(1.4);
-            }
-
+        @keyframes flash {
             100% {
                 transform: scale(1);
+                filter: hue-rotate(360deg);
             }
         }
     </style>
 </head>
 
 <body>
-    <div class="box"></div>
+    <div class="wrap">
+        <div class="box">
+            <div style="--x:0"></div>
+            <div style="--x:1"></div>
+            <div style="--x:2"></div>
+            <div style="--x:3"></div>
+            <div style="--x:4"></div>
+            <div style="--x:5"></div>
+            <div style="--x:6"></div>
+            <div style="--x:7"></div>
+            <div style="--x:8"></div>
+            <div style="--x:9"></div>
+            <div style="--x:10"></div>
+            <div style="--x:11"></div>
+            <div style="--x:12"></div>
+            <div style="--x:13"></div>
+            <div style="--x:14"></div>
+            <div style="--x:15"></div>
+            <div style="--x:16"></div>
+            <div style="--x:17"></div>
+        </div>
+    </div>
 </body>
 
 </html>
